Update challenge (#12)
