# packages/api/src/graphql/index.ts
@@ -1,25 +1,28 @@
-import {helloHandler} from "./hello";
-import {createSchema} from "graphql-yoga";
-import {getUsers} from "src/graphql/users";
+import { createSchema } from 'graphql-yoga';
+import { helloHandler } from './hello';
+import { getCrewMembers } from 'src/graphql/crewMembers';
 
-// Construct a schema, using GraphQL schema language
+// Migration status: crewMembers is done. crews and jobs are still REST only.
 export const schema = createSchema({
-    typeDefs: `
-        type User {
+  typeDefs: `
+        type CrewMember {
             id: String!
             name: String!
+            alias: String
+            role: String
+            standing: String
             email: String!
             profileImage: String
         }
         type Query {
             hello: String
-            users(smeId: String!): [User]
+            crewMembers(crewId: String!): [CrewMember]
         }
         `,
-    resolvers: {
-        Query: {
-            hello: helloHandler,
-            users:(_, args) => getUsers(args.smeId),
-        }
-    }
+  resolvers: {
+    Query: {
+      hello: helloHandler,
+      crewMembers: (_, args) => getCrewMembers(args.crewId),
+    },
+  },
 });
